<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <Button
        android:id="@+id/known"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/known"
        ></Button>
    <Button
        android:id="@+id/unknown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unknown"
        ></Button>
    <Button
        android:id="@+id/gotoComplex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switchMode"
        ></Button>



</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>