<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_background"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView42"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="18dp"
                app:srcCompat="@drawable/rectangle_1" />

            <TextView
                android:id="@+id/textView51"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="1/10"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/imageView43"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginLeft="180dp"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/change" />

            <ImageView
                android:id="@+id/imageView44"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/fav" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="120dp" />

        <TextView
            android:id="@+id/textView52"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/bubble"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView40"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginLeft="130dp"
                android:layout_marginTop="5dp"
                app:srcCompat="@drawable/voice" />

            <TextView
                android:id="@+id/textView45"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/b_bl_"
                android:textSize="24sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView46"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:text="请选择一个正确的中文词义吧！" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="80dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView47"
                android:layout_width="255dp"
                android:layout_height="56dp"
                android:layout_marginLeft="50dp"
                android:alpha="0.9"
                android:background="#BFF6BE"
                android:paddingLeft="25dp"
                android:paddingTop="6dp"
                android:text="@string/bubble_ch"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/imageView41"
                android:layout_width="54dp"
                android:layout_height="56dp"
                app:srcCompat="@drawable/right_logo" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/textView33"
            android:layout_width="310dp"
            android:layout_height="56dp"
            android:layout_gravity="center"
            android:alpha="0.7"
            android:background="@color/white"
            android:paddingLeft="25dp"
            android:paddingTop="6dp"
            android:text="@string/base_ch"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/textView34"
            android:layout_width="310dp"
            android:layout_height="56dp"
            android:layout_gravity="center"
            android:alpha="0.7"
            android:background="@color/white"
            android:paddingLeft="25dp"
            android:paddingTop="6dp"
            android:text="@string/business_ch"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/textView35"
            android:layout_width="310dp"
            android:layout_height="56dp"
            android:layout_gravity="center"
            android:alpha="0.7"
            android:background="@color/white"
            android:paddingLeft="25dp"
            android:paddingTop="6dp"
            android:text="@string/kite_ch"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="150dp" />

        <ImageView
            android:id="@+id/imageView30"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:srcCompat="@drawable/get_tip" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>